# coder-chat

./: .dockerignore  Dockerfile  compose.yaml  sample.compose.yaml
.github/workflows/: backend_health.yml  build_publish.yml  frontend_health.yml
backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
backend/database_migrations/: env.py
backend/database_migrations/versions/: 2025_12_30_2159-650e1467d8ae_initial_db_user.py  2025_12_31_2230-2222ddddac79_initial_db_user.py  2026_01_01_2341-723890d94bdb_added_refresh_tokens.py  2026_01_02_0324-a285aae94b89_added_refresh_tokens.py  2026_01_07_2327-e00715a7b367_added_chat_tables.py
backend/src/: ai_models.py  config.py  config_models.py  database.py  exceptions.py  logs.py  main.py
backend/src/data_models/: all_metadata.py  base.py  chat.py  user.py
backend/src/models/: chat.py  user.py
backend/src/router/: chat.py  user.py
backend/src/services/: chat.py  user.py
backend/src/util/: auth.py  database_utils.py  static_files.py
frontend/: .gitignore  eslint.config.js  index.html  package.json  prettier.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/main/: App.tsx  ProtectedRoute.tsx  main.tsx  tsconfig.json
frontend/src/main/components/: Chat.tsx  ChatContext.tsx  ChatLeftMenu.tsx  ChatMessage.tsx  ChatTypes.ts  EmptyChatPrompt.tsx
frontend/src/main/contexts/: ToastContext.tsx
frontend/src/main/stores/: AuthenticationStore.ts
frontend/src/main/views/: Chat.tsx  ChatPage.tsx  Login.tsx
frontend/src/test/: sample.test.ts  tsconfig.json
src/: main.py
